--- a/best_hotels/package.json
+++ b/best_hotels/package.json
@@ -14,6 +14,11 @@
     "express": "^4.13.3",
     "method-override": "^2.3.5",
     "mongoose": "^4.3.4",
-    "morgan": "^1.6.1"
+    "morgan": "^1.6.1",
+    "bcrypt": "^0.8.5",
+    "dotenv": "^1.2.0",
+    "jsonwebtoken": "^5.5.4",
+    "moment": "^2.11.0",
+    "request": "^2.67.0"
   }
 }
